--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ipfob-setter-example",
   "version": "1.0.0",
   "description": "An example of how to set ones alarm using automation such as an Amazon Dash button",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "R. Stephen Guerra",
